# GraduationProjectOnVTK

./: .gitignore  Cylinder.py  ExtractSelection.py  README.md  vtkPipelineDemo.py  vtkVolumeExample.py  vtkVolumeRenderingExample.py  初始化例子.py
C++ Ver/: 7.1_VolumeRenderingApp.cpp  CMakeLists.txt
Data/: backpack8.mhd  mrt8_angio.mhd  stent8.mhd
Python Ver/: Cylinder.py  ExtractSelection.py  vtkPipelineDemo.py  vtkVolumeExample.py  体绘制程序代码.py  初始化例子.py
Python Ver/ultimateVer/: py2exe_test.py  vtkVolumeRenderAPP.py
论文/: 三维扫描体数据的VTK 体绘制程序设计 - 副本.doc  三维扫描体数据的VTK 体绘制程序设计.doc  武汉大学本科生毕业论文(设计)工作管理办法(修订)及书写示范-1(1)-1.doc  毕业答辩.ppt  毕业答辩.pptx  毕业设计开题报告——蒋博洋.doc  测绘学院-2012301610300-蒋博洋（论文）.doc  测绘学院2016届本科毕业论文（设计）选题表-核对.xls  答辩注意事项.docx
论文/80353173800720258_蒋博洋_三维扫描体数据的VTK 体绘制程序设计 - 副本/: 三维扫描体数据的VTK 体绘制程序设计 - 副本-文本复制检测报告单（全文对照）.mht  三维扫描体数据的VTK 体绘制程序设计 - 副本-文本复制检测报告单（全文标明引文）.mht
论文/参考文献/VTK/: 基于VTK的医学图像三维重建及其可视化技术研究_宋海友.caj
